--- a/index.html
+++ b/index.html
@@ -6,42 +6,23 @@
 <title>Calíope - Mi primer añito 💚</title>
 <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
 
-<!-- Favicon -->
-<link rel="icon" type="image/png" href="miniatura.jpg">
+<!-- Favicon / Icono de la página -->
+<link rel="icon" type="image/png" href="https://lisandrosanma.github.io/PrimeraCal1fest/Miniatura.jpg">
 
-<!-- Open Graph para miniatura -->
+<!-- Open Graph / Miniatura para WhatsApp, Telegram, Facebook -->
 <meta property="og:title" content="Calíope - Mi primer añito 💚">
 <meta property="og:description" content="¡Te invito a mi Califest! Música, flores animadas y diversión.">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://tuusuario.github.io/invitacion-cali/">
-<meta property="og:image" content="https://tuusuario.github.io/invitacion-cali/miniatura.jpg">
+<meta property="og:url" content="https://lisandrosanma.github.io/PrimeraCal1fest/">
+<meta property="og:image" content="https://lisandrosanma.github.io/PrimeraCal1fest/Miniatura.jpg">
 <meta property="og:image:width" content="800">
 <meta property="og:image:height" content="800">
 
-<!-- Twitter / WhatsApp -->
+<!-- Twitter -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Calíope - Mi primer añito 💚">
 <meta name="twitter:description" content="¡Te invito a mi Califest! Música, flores animadas y diversión.">
-<meta name="twitter:image" content="https://tuusuario.github.io/invitacion-cali/miniatura.jpg">
-
-<style>
-html, body {margin:0;padding:0;font-family: 'Quicksand', sans-serif;background:linear-gradient(to bottom right, #c0f0eb, #e0fff9);color:#034d4a;overflow-x:hidden;}
-.background {position:fixed; top:0; left:0; width:100%; height:100%; overflow:hidden; z-index:0;}
-.background img {position:absolute; pointer-events:none; opacity:0.8;}
-@keyframes float {0% {transform: translateY(100vh) rotate(0deg); opacity:1;} 100% {transform: translateY(-10vh) rotate(360deg); opacity:0;}}
-.container {position: relative; z-index:2; display:flex; flex-direction: column; align-items:center; padding:20px; text-align:center;}
-h1, p { margin:10px 0; line-height:1.4; text-align:center; }
-h1 { color:#01796f; font-size:2em; animation: fadeIn 2s ease-in-out; }
-img#fotoBebe { width:150px; height:150px; object-fit:cover; border-radius:50%; box-shadow:0 0 15px rgba(0,77,74,0.2); cursor:pointer; transition: transform 0.3s ease; animation:pulse 2.5s infinite; margin:15px 0; }
-img#fotoBebe:hover { transform: scale(1.05); }
-.buttons { display:flex; flex-direction:column; gap:12px; width:90%; max-width:300px; margin-bottom:20px; }
-.buttons button { background: linear-gradient(90deg, #4dd0c5, #26a69a); border:none; color:#fff; font-size:1em; padding:12px 15px; border-radius:12px; cursor:pointer; box-shadow:0 2px 8px rgba(0,0,0,0.15); transition: transform 0.3s ease, background 0.8s ease; }
-.buttons button:hover { transform: scale(1.05); }
-#mensajeFinal { position:fixed; top:40%; left:50%; transform:translate(-50%,-50%); font-size:1.6em; color:#01796f; background:rgba(255,255,255,0.85); padding:15px 25px; border-radius:15px; opacity:0; pointer-events:none; text-align:center; box-shadow:0 0 15px rgba(0,0,0,0.2); z-index:3; transition: opacity 1s ease; }
-@keyframes fadeIn { from{opacity:0; transform:translateY(20px);} to{opacity:1; transform:translateY(0);} }
-@keyframes pulse {0%,100%{transform:scale(1);}50%{transform:scale(1.04);} }
-@keyframes spin { from{transform:rotate(0deg) scale(1);} to{transform:rotate(360deg) scale(1.2);} }
-</style>
+<meta name="twitter:image" content="https://lisandrosanma.github.io/PrimeraCal1fest/Miniatura.jpg">
 </head>
 <body>
 
